# smart-complaint

./: Dockerfile  README.md
smart_complaint/: app.py  complaint_generator.py  main.py  pyproject.toml  requirements.txt
smart_complaint/prompts/: base_prompt.txt  styles_prompts.json
tests/: test_output.py
